--- a/package.json
+++ b/package.json
@@ -72,10 +72,10 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nazedev/naze-md.git"
+    "url": "git+https://github.com/BadBoys404/WangsafMDV1.git"
   },
   "bugs": {
-    "url": "https://github.com/nazedev/naze-md/issues"
+    "url": "https://github.com/BadBoys404/WangsafMDV1/issues"
   },
-  "homepage": "https://github.com/nazedev/naze-md#readme"
+  "homepage": "https://github.com/BadBoys404/WangsafMDV1#readme"
 }
